<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/avt"
    tools:context="com.justappp.nekit.newtest.MainActivity"
    >


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:hint="@string/authorization"
            android:textColorHint="@color/colorText"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:hint="@string/enter_phone_number"
            android:textColorHint="@color/colorText"
            android:textSize="17sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_enter_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@drawable/edit_txt_style"
            android:ems="10"
            android:inputType="phone"
            android:padding="5dp"
            android:textSize="35sp"
            android:maxLength="13"/>

        <ImageView
            android:id="@+id/img_context"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/context_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:hint="@string/get_code"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textStyle="normal|bold"
            android:background="@drawable/btn_style_inactive"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:hint="@string/enter_code"
            android:textColorHint="@color/colorText"
            android:textSize="17sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/edt_enter_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_txt_style"
            android:ems="3"
            android:inputType="number"
            android:paddingLeft="19dp"
            android:paddingRight="19dp"
            android:paddingTop="2dp"
            android:textSize="35sp"
            android:maxLength="4"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:hint="@string/confirm"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textStyle="normal|bold"
            android:background="@drawable/btn_style_inactive"/>

    </LinearLayout>
</RelativeLayout>